# NoteFlow

./: .gitignore  CMakeLists.txt  README.md  homewindow.cpp  homewindow.h  homewindow.ui
src/backend/: package-lock.json  package.json  server.js
src/ui/: CMakeLists.txt  explorer.h  fileEditor.cpp  fileEditor.h  fileitemwidget.cpp  mainwindow.cpp  mainwindow.h  wsclient.cpp  wsclient.h
src/ui/ProjectLaunchProject/: CMakeLists.txt  Message.h  channelitemwidget.cpp  channelitemwidget.h  chatview.cpp  chatview.h  connectdialog.cpp  connectdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  messagebubble.cpp  messagebubble.h  wsclient.cpp  wsclient.h
